--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
  
 }
 .college-banner{
-  background: url('https://wallpaperaccess.com/full/1209519.jpg');
+  background: url('https://images.unsplash.com/photo-1602536422218-2009cae49eaa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bmV3JTIweW9yayUyMHVuaXZlcnNpdHl8ZW58MHx8MHx8fDA%3D&w=1000&q=80');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
